--- a/Modulo1/CalculadoraIMC/CalculadoraIMC/Base.lproj/Main.storyboard
+++ b/Modulo1/CalculadoraIMC/CalculadoraIMC/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cns-Gk-d3o">
                                         <rect key="frame" x="0.0" y="8" width="414" height="34"/>
                                         <subviews>
-                                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JgM-Kj-s4M">
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JgM-Kj-s4M">
                                                 <rect key="frame" x="20" y="0.0" width="374" height="34"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="34" id="4TJ-kx-9eK"/>
@@ -34,6 +34,7 @@
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
+                                            <constraint firstItem="JgM-Kj-s4M" firstAttribute="centerY" secondItem="Cns-Gk-d3o" secondAttribute="centerY" id="Cr0-T3-b47"/>
                                             <constraint firstAttribute="trailing" secondItem="JgM-Kj-s4M" secondAttribute="trailing" constant="20" symbolic="YES" id="IC2-sr-bXw"/>
                                             <constraint firstItem="JgM-Kj-s4M" firstAttribute="leading" secondItem="Cns-Gk-d3o" secondAttribute="leading" constant="20" symbolic="YES" id="ds0-YO-9QX"/>
                                             <constraint firstAttribute="height" constant="34" id="vZk-2v-Sft"/>
@@ -48,7 +49,7 @@
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Altura" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mlh-Dl-Rga">
                                                         <rect key="frame" x="0.0" y="0.0" width="374" height="34"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits"/>
+                                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                                         <connections>
                                                             <action selector="alturaTextfield:" destination="lmy-aa-Z8I" eventType="editingDidEnd" id="Ocb-54-frU"/>
                                                         </connections>
@@ -56,7 +57,7 @@
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Peso" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hhJ-r7-Ke3">
                                                         <rect key="frame" x="0.0" y="56" width="374" height="34"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits"/>
+                                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad" keyboardAppearance="alert"/>
                                                     </textField>
                                                 </subviews>
                                             </stackView>
